[package]
name = "skytable"
version = "0.1.0"
authors = ["Zomatree <angelokontaxis@hotmail.com>"]
edition = "2018"

[package.metadata.maturin]
classifier = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]
requires-python = ">=3.8"

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }

[lib]
name = "skytable"
crate-type = ["cdylib"]
